; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_main.c_UI_OwnerDraw.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_main.c_UI_OwnerDraw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_44__ = type { float, float, float, float }

@qtrue = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float, float, float, float, float, float, i32, i32, i32, float, float, i32, i32, i32)* @UI_OwnerDraw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UI_OwnerDraw(float %0, float %1, float %2, float %3, float %4, float %5, i32 %6, i32 %7, i32 %8, float %9, float %10, i32 %11, i32 %12, i32 %13) #0 {
  %15 = alloca float, align 4
  %16 = alloca float, align 4
  %17 = alloca float, align 4
  %18 = alloca float, align 4
  %19 = alloca float, align 4
  %20 = alloca float, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca float, align 4
  %25 = alloca float, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca %struct.TYPE_44__, align 4
  store float %0, float* %15, align 4
  store float %1, float* %16, align 4
  store float %2, float* %17, align 4
  store float %3, float* %18, align 4
  store float %4, float* %19, align 4
  store float %5, float* %20, align 4
  store i32 %6, i32* %21, align 4
  store i32 %7, i32* %22, align 4
  store i32 %8, i32* %23, align 4
  store float %9, float* %24, align 4
  store float %10, float* %25, align 4
  store i32 %11, i32* %26, align 4
  store i32 %12, i32* %27, align 4
  store i32 %13, i32* %28, align 4
  %30 = load float, float* %15, align 4
  %31 = load float, float* %19, align 4
  %32 = fadd float %30, %31
  %33 = getelementptr inbounds %struct.TYPE_44__, %struct.TYPE_44__* %29, i32 0, i32 0
  store float %32, float* %33, align 4
  %34 = load float, float* %16, align 4
  %35 = load float, float* %20, align 4
  %36 = fadd float %34, %35
  %37 = getelementptr inbounds %struct.TYPE_44__, %struct.TYPE_44__* %29, i32 0, i32 1
  store float %36, float* %37, align 4
  %38 = load float, float* %17, align 4
  %39 = getelementptr inbounds %struct.TYPE_44__, %struct.TYPE_44__* %29, i32 0, i32 2
  store float %38, float* %39, align 4
  %40 = load float, float* %18, align 4
  %41 = getelementptr inbounds %struct.TYPE_44__, %struct.TYPE_44__* %29, i32 0, i32 3
  store float %40, float* %41, align 4
  %42 = load i32, i32* %21, align 4
  switch i32 %42, label %260 [
    i32 167, label %43
    i32 170, label %48
    i32 147, label %52
    i32 172, label %54
    i32 173, label %59
    i32 174, label %63
    i32 146, label %67
    i32 169, label %71
    i32 159, label %76
    i32 166, label %81
    i32 163, label %86
    i32 161, label %91
    i32 164, label %96
    i32 134, label %101
    i32 135, label %106
    i32 177, label %111
    i32 139, label %117
    i32 182, label %123
    i32 181, label %123
    i32 180, label %123
    i32 179, label %123
    i32 178, label %123
    i32 144, label %132
    i32 143, label %132
    i32 142, label %132
    i32 141, label %132
    i32 140, label %132
    i32 156, label %141
    i32 157, label %146
    i32 158, label %150
    i32 160, label %154
    i32 133, label %159
    i32 152, label %164
    i32 132, label %166
    i32 131, label %168
    i32 130, label %170
    i32 150, label %172
    i32 149, label %175
    i32 148, label %178
    i32 155, label %181
    i32 154, label %184
    i32 153, label %187
    i32 128, label %190
    i32 129, label %195
    i32 183, label %200
    i32 162, label %206
    i32 151, label %212
    i32 176, label %217
    i32 175, label %222
    i32 145, label %227
    i32 171, label %232
    i32 138, label %236
    i32 136, label %241
    i32 137, label %246
    i32 168, label %250
    i32 165, label %255
  ]

43:                                               ; preds = %14
  %44 = load float, float* %25, align 4
  %45 = load i32, i32* %26, align 4
  %46 = load i32, i32* %28, align 4
  %47 = call i32 @UI_DrawHandicap(%struct.TYPE_44__* %29, float %44, i32 %45, i32 %46)
  br label %261

48:                                               ; preds = %14
  %49 = load float, float* %25, align 4
  %50 = load i32, i32* %26, align 4
  %51 = call i32 @UI_DrawEffects(%struct.TYPE_44__* %29, float %49, i32 %50)
  br label %261

52:                                               ; preds = %14
  %53 = call i32 @UI_DrawPlayerModel(%struct.TYPE_44__* %29)
  br label %261

54:                                               ; preds = %14
  %55 = load float, float* %25, align 4
  %56 = load i32, i32* %26, align 4
  %57 = load i32, i32* %28, align 4
  %58 = call i32 @UI_DrawClanName(%struct.TYPE_44__* %29, float %55, i32 %56, i32 %57)
  br label %261

59:                                               ; preds = %14
  %60 = load float, float* %25, align 4
  %61 = load i32, i32* %26, align 4
  %62 = call i32 @UI_DrawClanLogo(%struct.TYPE_44__* %29, float %60, i32 %61)
  br label %261

63:                                               ; preds = %14
  %64 = load float, float* %25, align 4
  %65 = load i32, i32* %26, align 4
  %66 = call i32 @UI_DrawClanCinematic(%struct.TYPE_44__* %29, float %64, i32 %65)
  br label %261

67:                                               ; preds = %14
  %68 = load float, float* %25, align 4
  %69 = load i32, i32* %26, align 4
  %70 = call i32 @UI_DrawPreviewCinematic(%struct.TYPE_44__* %29, float %68, i32 %69)
  br label %261

71:                                               ; preds = %14
  %72 = load float, float* %25, align 4
  %73 = load i32, i32* %26, align 4
  %74 = load i32, i32* %28, align 4
  %75 = call i32 @UI_DrawGameType(%struct.TYPE_44__* %29, float %72, i32 %73, i32 %74)
  br label %261

76:                                               ; preds = %14
  %77 = load float, float* %25, align 4
  %78 = load i32, i32* %26, align 4
  %79 = load i32, i32* %28, align 4
  %80 = call i32 @UI_DrawNetGameType(%struct.TYPE_44__* %29, float %77, i32 %78, i32 %79)
  br label %261

81:                                               ; preds = %14
  %82 = load float, float* %25, align 4
  %83 = load i32, i32* %26, align 4
  %84 = load i32, i32* %28, align 4
  %85 = call i32 @UI_DrawJoinGameType(%struct.TYPE_44__* %29, float %82, i32 %83, i32 %84)
  br label %261

86:                                               ; preds = %14
  %87 = load float, float* %25, align 4
  %88 = load i32, i32* %26, align 4
  %89 = load i32, i32* @qtrue, align 4
  %90 = call i32 @UI_DrawMapPreview(%struct.TYPE_44__* %29, float %87, i32 %88, i32 %89)
  br label %261

91:                                               ; preds = %14
  %92 = load float, float* %25, align 4
  %93 = load i32, i32* %26, align 4
  %94 = load i32, i32* %28, align 4
  %95 = call i32 @UI_DrawMapTimeToBeat(%struct.TYPE_44__* %29, float %92, i32 %93, i32 %94)
  br label %261

96:                                               ; preds = %14
  %97 = load float, float* %25, align 4
  %98 = load i32, i32* %26, align 4
  %99 = load i32, i32* @qfalse, align 4
  %100 = call i32 @UI_DrawMapCinematic(%struct.TYPE_44__* %29, float %97, i32 %98, i32 %99)
  br label %261

101:                                              ; preds = %14
  %102 = load float, float* %25, align 4
  %103 = load i32, i32* %26, align 4
  %104 = load i32, i32* @qtrue, align 4
  %105 = call i32 @UI_DrawMapCinematic(%struct.TYPE_44__* %29, float %102, i32 %103, i32 %104)
  br label %261

106:                                              ; preds = %14
  %107 = load float, float* %25, align 4
  %108 = load i32, i32* %26, align 4
  %109 = load i32, i32* %28, align 4
  %110 = call i32 @UI_DrawSkill(%struct.TYPE_44__* %29, float %107, i32 %108, i32 %109)
  br label %261

111:                                              ; preds = %14
  %112 = load float, float* %25, align 4
  %113 = load i32, i32* %26, align 4
  %114 = load i32, i32* @qtrue, align 4
  %115 = load i32, i32* %28, align 4
  %116 = call i32 @UI_DrawTeamName(%struct.TYPE_44__* %29, float %112, i32 %113, i32 %114, i32 %115)
  br label %261

117:                                              ; preds = %14
  %118 = load float, float* %25, align 4
  %119 = load i32, i32* %26, align 4
  %120 = load i32, i32* @qfalse, align 4
  %121 = load i32, i32* %28, align 4
  %122 = call i32 @UI_DrawTeamName(%struct.TYPE_44__* %29, float %118, i32 %119, i32 %120, i32 %121)
  br label %261

123:                                              ; preds = %14, %14, %14, %14, %14
  %124 = load float, float* %25, align 4
  %125 = load i32, i32* %26, align 4
  %126 = load i32, i32* @qtrue, align 4
  %127 = load i32, i32* %21, align 4
  %128 = sub nsw i32 %127, 182
  %129 = add nsw i32 %128, 1
  %130 = load i32, i32* %28, align 4
  %131 = call i32 @UI_DrawTeamMember(%struct.TYPE_44__* %29, float %124, i32 %125, i32 %126, i32 %129, i32 %130)
  br label %261

132:                                              ; preds = %14, %14, %14, %14, %14
  %133 = load float, float* %25, align 4
  %134 = load i32, i32* %26, align 4
  %135 = load i32, i32* @qfalse, align 4
  %136 = load i32, i32* %21, align 4
  %137 = sub nsw i32 %136, 144
  %138 = add nsw i32 %137, 1
  %139 = load i32, i32* %28, align 4
  %140 = call i32 @UI_DrawTeamMember(%struct.TYPE_44__* %29, float %133, i32 %134, i32 %135, i32 %138, i32 %139)
  br label %261

141:                                              ; preds = %14
  %142 = load float, float* %25, align 4
  %143 = load i32, i32* %26, align 4
  %144 = load i32, i32* %28, align 4
  %145 = call i32 @UI_DrawNetSource(%struct.TYPE_44__* %29, float %142, i32 %143, i32 %144)
  br label %261

146:                                              ; preds = %14
  %147 = load float, float* %25, align 4
  %148 = load i32, i32* %26, align 4
  %149 = call i32 @UI_DrawNetMapPreview(%struct.TYPE_44__* %29, float %147, i32 %148)
  br label %261

150:                                              ; preds = %14
  %151 = load float, float* %25, align 4
  %152 = load i32, i32* %26, align 4
  %153 = call i32 @UI_DrawNetMapCinematic(%struct.TYPE_44__* %29, float %151, i32 %152)
  br label %261

154:                                              ; preds = %14
  %155 = load float, float* %25, align 4
  %156 = load i32, i32* %26, align 4
  %157 = load i32, i32* %28, align 4
  %158 = call i32 @UI_DrawNetFilter(%struct.TYPE_44__* %29, float %155, i32 %156, i32 %157)
  br label %261

159:                                              ; preds = %14
  %160 = load float, float* %25, align 4
  %161 = load i32, i32* %26, align 4
  %162 = load i32, i32* %28, align 4
  %163 = call i32 @UI_DrawTier(%struct.TYPE_44__* %29, float %160, i32 %161, i32 %162)
  br label %261

164:                                              ; preds = %14
  %165 = call i32 @UI_DrawOpponent(%struct.TYPE_44__* %29)
  br label %261

166:                                              ; preds = %14
  %167 = call i32 @UI_DrawTierMap(%struct.TYPE_44__* %29, i32 0)
  br label %261

168:                                              ; preds = %14
  %169 = call i32 @UI_DrawTierMap(%struct.TYPE_44__* %29, i32 1)
  br label %261

170:                                              ; preds = %14
  %171 = call i32 @UI_DrawTierMap(%struct.TYPE_44__* %29, i32 2)
  br label %261

172:                                              ; preds = %14
  %173 = load i32, i32* %26, align 4
  %174 = call i32 @UI_DrawPlayerLogo(%struct.TYPE_44__* %29, i32 %173)
  br label %261

175:                                              ; preds = %14
  %176 = load i32, i32* %26, align 4
  %177 = call i32 @UI_DrawPlayerLogoMetal(%struct.TYPE_44__* %29, i32 %176)
  br label %261

178:                                              ; preds = %14
  %179 = load i32, i32* %26, align 4
  %180 = call i32 @UI_DrawPlayerLogoName(%struct.TYPE_44__* %29, i32 %179)
  br label %261

181:                                              ; preds = %14
  %182 = load i32, i32* %26, align 4
  %183 = call i32 @UI_DrawOpponentLogo(%struct.TYPE_44__* %29, i32 %182)
  br label %261

184:                                              ; preds = %14
  %185 = load i32, i32* %26, align 4
  %186 = call i32 @UI_DrawOpponentLogoMetal(%struct.TYPE_44__* %29, i32 %185)
  br label %261

187:                                              ; preds = %14
  %188 = load i32, i32* %26, align 4
  %189 = call i32 @UI_DrawOpponentLogoName(%struct.TYPE_44__* %29, i32 %188)
  br label %261

190:                                              ; preds = %14
  %191 = load float, float* %25, align 4
  %192 = load i32, i32* %26, align 4
  %193 = load i32, i32* %28, align 4
  %194 = call i32 @UI_DrawTierMapName(%struct.TYPE_44__* %29, float %191, i32 %192, i32 %193)
  br label %261

195:                                              ; preds = %14
  %196 = load float, float* %25, align 4
  %197 = load i32, i32* %26, align 4
  %198 = load i32, i32* %28, align 4
  %199 = call i32 @UI_DrawTierGameType(%struct.TYPE_44__* %29, float %196, i32 %197, i32 %198)
  br label %261

200:                                              ; preds = %14
  %201 = load float, float* %25, align 4
  %202 = load i32, i32* %26, align 4
  %203 = load i32, i32* %28, align 4
  %204 = load i32, i32* @qtrue, align 4
  %205 = call i32 @UI_DrawAllMapsSelection(%struct.TYPE_44__* %29, float %201, i32 %202, i32 %203, i32 %204)
  br label %261

206:                                              ; preds = %14
  %207 = load float, float* %25, align 4
  %208 = load i32, i32* %26, align 4
  %209 = load i32, i32* %28, align 4
  %210 = load i32, i32* @qfalse, align 4
  %211 = call i32 @UI_DrawAllMapsSelection(%struct.TYPE_44__* %29, float %207, i32 %208, i32 %209, i32 %210)
  br label %261

212:                                              ; preds = %14
  %213 = load float, float* %25, align 4
  %214 = load i32, i32* %26, align 4
  %215 = load i32, i32* %28, align 4
  %216 = call i32 @UI_DrawOpponentName(%struct.TYPE_44__* %29, float %213, i32 %214, i32 %215)
  br label %261

217:                                              ; preds = %14
  %218 = load float, float* %25, align 4
  %219 = load i32, i32* %26, align 4
  %220 = load i32, i32* %28, align 4
  %221 = call i32 @UI_DrawBotName(%struct.TYPE_44__* %29, float %218, i32 %219, i32 %220)
  br label %261

222:                                              ; preds = %14
  %223 = load float, float* %25, align 4
  %224 = load i32, i32* %26, align 4
  %225 = load i32, i32* %28, align 4
  %226 = call i32 @UI_DrawBotSkill(%struct.TYPE_44__* %29, float %223, i32 %224, i32 %225)
  br label %261

227:                                              ; preds = %14
  %228 = load float, float* %25, align 4
  %229 = load i32, i32* %26, align 4
  %230 = load i32, i32* %28, align 4
  %231 = call i32 @UI_DrawRedBlue(%struct.TYPE_44__* %29, float %228, i32 %229, i32 %230)
  br label %261

232:                                              ; preds = %14
  %233 = load float, float* %25, align 4
  %234 = load i32, i32* %26, align 4
  %235 = call i32 @UI_DrawCrosshair(%struct.TYPE_44__* %29, float %233, i32 %234)
  br label %261

236:                                              ; preds = %14
  %237 = load float, float* %25, align 4
  %238 = load i32, i32* %26, align 4
  %239 = load i32, i32* %28, align 4
  %240 = call i32 @UI_DrawSelectedPlayer(%struct.TYPE_44__* %29, float %237, i32 %238, i32 %239)
  br label %261

241:                                              ; preds = %14
  %242 = load float, float* %25, align 4
  %243 = load i32, i32* %26, align 4
  %244 = load i32, i32* %28, align 4
  %245 = call i32 @UI_DrawServerRefreshDate(%struct.TYPE_44__* %29, float %242, i32 %243, i32 %244)
  br label %261

246:                                              ; preds = %14
  %247 = load float, float* %25, align 4
  %248 = load i32, i32* %26, align 4
  %249 = call i32 @UI_DrawServerMOTD(%struct.TYPE_44__* %29, float %247, i32 %248)
  br label %261

250:                                              ; preds = %14
  %251 = load float, float* %25, align 4
  %252 = load i32, i32* %26, align 4
  %253 = load i32, i32* %28, align 4
  %254 = call i32 @UI_DrawGLInfo(%struct.TYPE_44__* %29, float %251, i32 %252, i32 %253)
  br label %261

255:                                              ; preds = %14
  %256 = load float, float* %25, align 4
  %257 = load i32, i32* %26, align 4
  %258 = load i32, i32* %28, align 4
  %259 = call i32 @UI_DrawKeyBindStatus(%struct.TYPE_44__* %29, float %256, i32 %257, i32 %258)
  br label %261

260:                                              ; preds = %14
  br label %261

261:                                              ; preds = %260, %255, %250, %246, %241, %236, %232, %227, %222, %217, %212, %206, %200, %195, %190, %187, %184, %181, %178, %175, %172, %170, %168, %166, %164, %159, %154, %150, %146, %141, %132, %123, %117, %111, %106, %101, %96, %91, %86, %81, %76, %71, %67, %63, %59, %54, %52, %48, %43
  ret void
}

declare dso_local i32 @UI_DrawHandicap(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawEffects(%struct.TYPE_44__*, float, i32) #1

declare dso_local i32 @UI_DrawPlayerModel(%struct.TYPE_44__*) #1

declare dso_local i32 @UI_DrawClanName(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawClanLogo(%struct.TYPE_44__*, float, i32) #1

declare dso_local i32 @UI_DrawClanCinematic(%struct.TYPE_44__*, float, i32) #1

declare dso_local i32 @UI_DrawPreviewCinematic(%struct.TYPE_44__*, float, i32) #1

declare dso_local i32 @UI_DrawGameType(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawNetGameType(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawJoinGameType(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawMapPreview(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawMapTimeToBeat(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawMapCinematic(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawSkill(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawTeamName(%struct.TYPE_44__*, float, i32, i32, i32) #1

declare dso_local i32 @UI_DrawTeamMember(%struct.TYPE_44__*, float, i32, i32, i32, i32) #1

declare dso_local i32 @UI_DrawNetSource(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawNetMapPreview(%struct.TYPE_44__*, float, i32) #1

declare dso_local i32 @UI_DrawNetMapCinematic(%struct.TYPE_44__*, float, i32) #1

declare dso_local i32 @UI_DrawNetFilter(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawTier(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawOpponent(%struct.TYPE_44__*) #1

declare dso_local i32 @UI_DrawTierMap(%struct.TYPE_44__*, i32) #1

declare dso_local i32 @UI_DrawPlayerLogo(%struct.TYPE_44__*, i32) #1

declare dso_local i32 @UI_DrawPlayerLogoMetal(%struct.TYPE_44__*, i32) #1

declare dso_local i32 @UI_DrawPlayerLogoName(%struct.TYPE_44__*, i32) #1

declare dso_local i32 @UI_DrawOpponentLogo(%struct.TYPE_44__*, i32) #1

declare dso_local i32 @UI_DrawOpponentLogoMetal(%struct.TYPE_44__*, i32) #1

declare dso_local i32 @UI_DrawOpponentLogoName(%struct.TYPE_44__*, i32) #1

declare dso_local i32 @UI_DrawTierMapName(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawTierGameType(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawAllMapsSelection(%struct.TYPE_44__*, float, i32, i32, i32) #1

declare dso_local i32 @UI_DrawOpponentName(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawBotName(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawBotSkill(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawRedBlue(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawCrosshair(%struct.TYPE_44__*, float, i32) #1

declare dso_local i32 @UI_DrawSelectedPlayer(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawServerRefreshDate(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawServerMOTD(%struct.TYPE_44__*, float, i32) #1

declare dso_local i32 @UI_DrawGLInfo(%struct.TYPE_44__*, float, i32, i32) #1

declare dso_local i32 @UI_DrawKeyBindStatus(%struct.TYPE_44__*, float, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
